--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,9 @@ fabric.properties
 # Simple Build Tool
 # http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
 
+.idea*
+*iml
+
 dist/*
 target/
 lib_managed/
